--- a/index.html
+++ b/index.html
@@ -45,34 +45,34 @@
 		<div class="untitled__slide">
 			<div class="untitled__slideBg"></div>
 			<div class="untitled__slideContent">
-				<span>London</span> 
-				<span>Scout</span>
-				<a class="button" href="https://unsplash.com/@scoutthecity" target="/black">Unsplash Profile</a>
+				<span>Boost Your</span> 
+				<span>Business with..</span>
+				<a class="button" href="#" target="/black">Profile</a>
 			</div>
 		</div>
 		<div class="untitled__slide">
 			<div class="untitled__slideBg"></div>
 			<div class="untitled__slideContent">
 				
-				<span>Vladimir</span> 
-				<span>Kudinov</span>
-				<a class="button" href="https://unsplash.com/@madbyte" target="/black">Unsplash Profile</a>
+				<span>Web</span> 
+				<span>Development</span>
+				<a class="button" href="#" target="/black">Unsplash Profile</a>
 			</div>
 		</div>
 		<div class="untitled__slide">
 			<div class="untitled__slideBg"></div>
 			<div class="untitled__slideContent">
-				<span>Macio</span> 
-				<span>Amorim</span>
-				<a class="button" href="https://unsplash.com/@maicoamorim" target="/black">Unsplash Profile</a>
+				<span>Mobile</span> 
+				<span>Developmental </span>
+				<a class="button" href="#" target="/black">Unsplash Profile</a>
 			</div>
 		</div>
 		<div class="untitled__slide">
 			<div class="untitled__slideBg"></div>
 			<div class="untitled__slideContent">
-				<span>Mario</span> 
-				<span>Calvo</span>
-				<a class="button" href="https://unsplash.com/@mariocalvo" target="/black">Unsplash Profile</a>
+				<span>Digital</span> 
+				<span>Marketing</span>
+				<a class="button" href="#" target="/black">Unsplash Profile</a>
 			</div>
 		</div>
 	</div>
